[gd_scene load_steps=8 format=3 uid="uid://dmgnh27njbn5h"]

[ext_resource type="Script" uid="uid://4kibmowkynq" path="res://Scripts/Marble/marble.gd" id="1_3mo50"]
[ext_resource type="Texture2D" uid="uid://bi1eyfmgk3ahw" path="res://Assets/Flag/Alabama_round.png" id="2_7mvxq"]
[ext_resource type="Texture2D" uid="uid://bnfl0b60nlpfp" path="res://Assets/Weapon/Iicon_32_08.png" id="3_k67yk"]

[sub_resource type="SystemFont" id="SystemFont_7mvxq"]
font_weight = 900
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_k67yk"]
font = SubResource("SystemFont_7mvxq")
font_size = 24
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_evll6"]
radius = 65.06919

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qupxx"]
size = Vector2(20, 152)

[node name="Marble" type="RigidBody2D"]
texture_filter = 1
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 4
script = ExtResource("1_3mo50")
bias_strength = 0.0

[node name="Name" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
label_settings = SubResource("LabelSettings_k67yk")
horizontal_alignment = 1

[node name="CoreShape" type="CollisionShape2D" parent="."]
texture_filter = 1
shape = SubResource("CircleShape2D_evll6")

[node name="CoreSprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_7mvxq")

[node name="WeaponPivot" type="Node2D" parent="."]
texture_filter = 1
metadata/_edit_group_ = true

[node name="Weapon" type="Area2D" parent="WeaponPivot"]
light_mask = 3
visibility_layer = 2
texture_filter = 1
position = Vector2(0, -140)

[node name="WeaponShape" type="CollisionShape2D" parent="WeaponPivot/Weapon"]
texture_filter = 1
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_qupxx")

[node name="WeaponSprite" type="Sprite2D" parent="WeaponPivot/Weapon"]
texture_filter = 1
rotation = -0.7853982
scale = Vector2(4, 4)
texture = ExtResource("3_k67yk")

[node name="WeaponTip" type="Marker2D" parent="WeaponPivot/Weapon"]
texture_filter = 1
position = Vector2(0, -25)
